More findbugs fixes
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@60338 fdecad78-55fc-0310-b1b2-d7d25cf747c9